# leistungsnachweis-ride-distributor

./: .astylerc  .coveralls.yml  .gitignore  .travis.yml  Aggregator_8cpp.html  Aggregator_8hpp.html  Aggregator_8hpp_source.html  AlgorithmTest_8cpp.html  AlgorithmTest_8hpp.html  AlgorithmTest_8hpp_source.html  Algorithm_8cpp.html  Algorithm_8hpp.html  Algorithm_8hpp_source.html  CMakeLists.txt  GeneratorTest_8cpp.html  GeneratorTest_8hpp.html  GeneratorTest_8hpp_source.html  Generator_8cpp.html  Generator_8hpp.html  Generator_8hpp_source.html  InputDataTest_8cpp.html  InputDataTest_8hpp.html  InputDataTest_8hpp_source.html  InputData_8cpp.html  InputData_8hpp.html  InputData_8hpp_source.html  OutputDataTest_8cpp.html  OutputDataTest_8hpp.html  OutputDataTest_8hpp_source.html  OutputData_8cpp.html  OutputData_8hpp.html  OutputData_8hpp_source.html  README.md  README_8md.html  RLAPSolverHungarianTest_8cpp.html  RLAPSolverHungarian_8cpp.html  RLAPSolverHungarian_8hpp.html  RLAPSolverHungarian_8hpp_source.html  RLAPSolverJV_8cpp.html  RLAPSolverJV_8hpp.html  (+1220 more)
docs/: CMakeLists.txt  Doxyfile.in
headers/: CMakeLists.txt
resources/: checker.py  rlap_creator.py
resources/Original/: b_should_be_easy.out  c_no_hurry.out  d_metropolis.out  e_high_bonus.out
resources/RLAP_max_points/: b_should_be_easy.out  c_no_hurry.out  d_metropolis.out  e_high_bonus.out
resources/RLAP_max_score/: b_should_be_easy.out  c_no_hurry.out  d_metropolis.out  e_high_bonus.out
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_6.js  classes_7.js  classes_b.js  classes_e.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  files_0.js  files_1.js  files_2.js  files_4.js  files_5.js  (+34 more)
src/: CMakeLists.txt  main.cpp
src/Algorithm/: Aggregator.cpp  Aggregator.hpp  Algorithm.cpp  Algorithm.hpp  Generator.cpp  Generator.hpp  RLAPSolver.cpp  RLAPSolver.hpp  RLAPSolverHungarian.cpp  RLAPSolverJV.cpp  Types.hpp
src/Algorithm/RLAP/: RLAPSolver.hpp  RLAPSolverHungarian.cpp  RLAPSolverHungarian.hpp  RLAPSolverJV.cpp  RLAPSolverJV.hpp
src/DataHandlers/: CMakeLists.txt  InputData.cpp  InputData.hpp  OutputData.cpp  OutputData.hpp  SearchGraphNode.cpp  SearchGraphNode.hpp  input_data.cpp  input_data.h
src/Numeric/: Tensor.cpp  Tensor.hpp  Tensor.tpp
src/Utils/: Utils.hpp
test/: CMakeLists.txt  gtest.cmake  test.cpp
test/Algorithm/: AlgorithmTest.cpp  AlgorithmTest.hpp  GeneratorTest.cpp  GeneratorTest.hpp  RLAPSolverTest.cpp
test/Algorithm/RLAP/: RLAPSolverHungarianTest.cpp  RLAPSolverTest.cpp  RLAPSolverTest.hpp
test/DataHandlers/: InputDataTest.cpp  InputDataTest.hpp  OutputDataTest.cpp  OutputDataTest.hpp  SearchGraphNodeTest.cpp  SearchGraphNodeTest.hpp
test/Numeric/: TensorTest.cpp
test/Utils/: UtilsTest.hpp
